--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ try {
         <article class="my-8 flex">
           {/* <img src={doc.image_url} alt={`${doc.title} cover`} height="100" width="100" class="rounded h-24 w-24 mr-4" /> */}
           <div class="flex-1">
-            <a href={`https://readwise.io/reader/shared/${doc.id}`}>
+            <a href={`https://scribe-read.aravindballa.workers.dev/${doc.id}`}>
               <h2 class="">
                 <span class="text-lg font-semibold">{doc.title}</span> · <span>{doc.author}</span>
               </h2>
